--- a/Task Lesson/style.css
+++ b/Task Lesson/style.css
@@ -4,13 +4,20 @@
     box-sizing: border-box;
 }
 .container{
-    width: 100%;
+    width: 65%;
     max-width: 960px;
     margin-inline:auto;
 }
 .header{
 text-align: center;
+margin-bottom: 50px;
 
+}
+
+.title{
+    color: #3a4971;
+    font-size: 40px;
+    font-weight: 900;
 }
 
 .row {
@@ -27,12 +34,23 @@ text-align: center;
     padding-right: 15px;
 }
 .img{
-    width: 250px;
-    height: 250px;
-    margin-bottom:250px;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 30px;
+
 
 
 }
 .desc{
     margin-top: auto;
+}
+.desc-h2{
+    color:#3a4971;
+    text-decoration: none;
+    font-size: 20px;
+    
+}
+
+.news{
+    margin-bottom: 10px;
 }
